--- a/javascript/index.html
+++ b/javascript/index.html
@@ -13,6 +13,7 @@
     </header>
     <script src="basics.js"></script>
     <script src="oop.js"></script>
+    <script src="async.js"></script>
 </body>
 
 </html>
