--- a/javascript/index.html
+++ b/javascript/index.html
@@ -14,6 +14,7 @@
     <script src="basics.js"></script>
     <script src="oop.js"></script>
     <script src="async.js"></script>
+    <script src="api.js"></script>
 </body>
 
 </html>
