Shradha Khapra Video (Last Lecture: Fetch API with Project | JavaScript Full Course)
Shradha Khapra Video Lecture-13 (Last Lecture: Fetch API with Project | JavaScript Full Course)
- Cover API call method fetch (Only GET request for now)
- Mini project (didn’t practice the code, just developed the understanding).

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -11,9 +11,14 @@
     <header>
         <h1>JS Crash Course</h1>
     </header>
-    <script src="basics.js"></script>
-    <script src="oop.js"></script>
-    <script src="async.js"></script>
+    <button id="btn_cat">Get a cat Image</button>
+    </br>
+    </br>
+    </br>
+    <img id="cats_image" style='max-height:512px' />
+    <!-- <script src="basics.js"></script> -->
+    <!-- <script src="oop.js"></script> -->
+    <!-- <script src="async.js"></script> -->
     <script src="api.js"></script>
 </body>
 
