--- a/javascript/index.html
+++ b/javascript/index.html
@@ -16,10 +16,10 @@
     </br>
     </br>
     <img id="cats_image" style='max-height:512px' />
-    <!-- <script src="basics.js"></script> -->
+    <script src="basics.js"></script>
     <!-- <script src="oop.js"></script> -->
     <!-- <script src="async.js"></script> -->
-    <script src="api.js"></script>
+    <!-- <script src="api.js"></script> -->
 </body>
 
 </html>
