--- a/javascript/index.html
+++ b/javascript/index.html
@@ -20,6 +20,9 @@
     <!-- <script src="oop.js"></script> -->
     <!-- <script src="async.js"></script> -->
     <!-- <script src="api.js"></script> -->
+     
+    <!-- should define type so can use import and export statements -->
+    <script type="module" src="module.js"></script>
 </body>
 
 </html>
