Covers Shallow & deep copy

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -22,7 +22,7 @@
     <!-- <script src="api.js"></script> -->
      
     <!-- should define type so can use import and export statements -->
-    <script type="module" src="module.js"></script>
+    <!-- <script type="module" src="module.js"></script> -->
 </body>
 
 </html>
