--- a/typescript/index.html
+++ b/typescript/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Crash Course</title>
+    <title>TypeSrcipt Crash Course</title>
 </head>
 
 <body>
